    method returns void is to compare the return value of QMetaMethod::returnType()
    to QMetaType::Void.

- QVariant:
  * Inconsistent constructor taking Qt::GlobalColor and producing QVariant(QColor)
    instance was removed. Code constructing such variants can be migrated by
    explicitly calling QColor constructor. For example from "QVariant(Qt::red)"
    to "QVariant(QColor(Qt::red))"

- QTestLib:
  * The plain-text, xml and lightxml test output formats have been changed to
    show a test result for every row of test data in data-driven tests.  In
    Qt4, only fails and skips were shown for individual data rows and passes
    were not shown for individual data rows, preventing accurate calculation
    of test run rates and pass rates.
  * The QTRY_VERIFY and QTRY_COMPARE macros have been moved into QTestLib.
    These macros formerly lived in tests/shared/util.h but are now provided
    by including the <QtTest/QtTest> header. In addition,
    QTRY_VERIFY_WITH_TIMEOUT and QTRY_COMPARE_WITH_TIMEOUT are provided,
    allowing for specifying custom timeout values.
  * The QTEST_NOOP_MAIN macro has been removed from the API.  If a test is
    known at compile-time to be inapplicable for a particular build it should
    be omitted via .pro file logic, or the test should call QSKIP in the
    initTestCase() method to skip the entire test and report a meaningful
    explanation in the test log.
  * The DEPENDS_ON macro has been removed from the API.  This macro did nothing
    and misled some users to believe that they could make test functions depend
    on each other or impose an execution order on test functions.
  * The QTest::qt_snprintf function has been removed from the API.  This was an
    internal testlib function that was exposed in the public API due to its use
    in a public macro.  Any calls to this function should be replaced by a call
    to qsnprintf(), which comes from the <QtCore/QByteArray> header.