@@ -92,6 +92,10 @@ information about a particular change.
     instance was removed. Code constructing such variants can be migrated by
     explicitly calling QColor constructor. For example from "QVariant(Qt::red)"
     to "QVariant(QColor(Qt::red))"
+  * Similarly, implicit creation of QVariants from enum values Qt::BrushStyle,
+    Qt::PenStyle, and Qt::CursorShape have been removed. Create objects explicitly
+    or use static_cast<int>(Qt::SolidLine) to create a QVariant of type int with
+    the same value as the enum.
 
 - QTestLib:
   * The plain-text, xml and lightxml test output formats have been changed to
